--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,12 @@ body {
   margin: auto;
   flex-wrap: wrap;
 }
-
+@media (max-width:767px) {
+ .input-group {
+  flex-direction: column;
+  width: fit-content;
+ }
+}
 #user-input label {
   display: block;
   margin-bottom: 0.25rem;
